<resources>
    <string name="app_name">TobaccoFeed</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="main">Main</string>
    <string name="search">Search</string>
    <string name="tobacco">Tobacco</string>
    <string name="username">Username</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="save">Save</string>
    <string name="log_in">Log In</string>
    <string name="log_in_message">Logged in successfully!</string>
    <string name="log_out_message">Logged out successfully!</string>
    <string name="search_lock_message">Sorry, but now we can\'t search \'</string>
    <string name="save_message">Saved</string>

    <string-array name="languages">
        <item>English</item>
        <item>Русский</item>
    </string-array>

</resources>
