<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/main" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_tobacco"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/tobacco" />
    </group>

    <item android:title="@string/username">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
